--- a/projetos/.eslintrc.json
+++ b/projetos/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "parserOptions": {
         "ecmaVersion": 6,
-        "sourceType": "module"      
+        "sourceType": "module"
     },
     "env": {
         "browser": true,
@@ -12,19 +12,19 @@
         "google"
     ],
     "rules": {
-        "require-jsdoc": "off",
-        "no-console": "off",
-        "comma-dangle": "off",
         "indent": ["error", 4],
         "no-alert": "error",
+        "prefer-const": "error",
+        "eqeqeq": "error",
+        "camelcase": "error",
         "max-lines": ["warn", 100],
         "max-depth": ["warn", 4],
         "max-nested-callbacks": ["warn", 4],
         "max-params": ["warn", 4],
         "max-statements": ["warn", 20],
-        "prefer-const": "warn",
-        "eqeqeq": "warn",
-        "no-magic-numbers": "warn",
-        "camelcase": "warn"
+        "no-magic-numbers": ["warn", {"ignoreArrayIndexes": true, "ignore": [-1, 0, 1]}],
+        "require-jsdoc": "off",
+        "no-console": "off",
+        "comma-dangle": "off"
     }
 }
